--- a/QuanLyThuChi/QuanLyThuChi/App.xaml
+++ b/QuanLyThuChi/QuanLyThuChi/App.xaml
@@ -16,6 +16,40 @@
             <x:String x:Key="Add">Thêm</x:String>
             <x:String x:Key="Chart">Thống kê</x:String>
             <x:String x:Key="More">Khác</x:String>
+
+            <Style x:Key="DateFormat" TargetType="Label">
+                <Setter Property="FontSize" Value="Body" />
+                <Setter Property="VerticalOptions" Value="End" />
+                <Setter Property="FontAttributes" Value="Bold" />
+                <Setter Property="Margin" Value="5,0,0,0" />
+            </Style>
+            <Style x:Key="TitleFormat" TargetType="Label">
+                <Setter Property="FontSize" Value="Small" />
+                <Setter Property="VerticalOptions" Value="Start" />
+                <Setter Property="Margin" Value="5,0,0,5" />
+            </Style>
+            <Style x:Key="CostThuFormat" TargetType="Label">
+                <Setter Property="FontSize" Value="Small" />
+                <Setter Property="Margin" Value="0,0,10,5" />
+                <Setter Property="FontAttributes" Value="Bold" />
+                <Setter Property="VerticalOptions" Value="Center" />
+                <Setter Property="HorizontalOptions" Value="End" />
+                <Setter Property="TextColor" Value="#169F00" />
+            </Style>
+            <Style x:Key="CostChiFormat" TargetType="Label">
+                <Setter Property="FontSize" Value="Small" />
+                <Setter Property="Margin" Value="0,0,10,5" />
+                <Setter Property="FontAttributes" Value="Bold" />
+                <Setter Property="VerticalOptions" Value="Start" />
+                <Setter Property="HorizontalOptions" Value="Center" />
+                <Setter Property="TextColor" Value="#B12B00" />
+            </Style>
+
+            <Style x:Key="Separator" TargetType="BoxView">
+                <Setter Property="Margin" Value="5,0" />
+                <Setter Property="HeightRequest" Value="1" />
+                <Setter Property="BackgroundColor" Value="#EAEAEA" />
+            </Style>
         </ResourceDictionary>
 
     </Application.Resources>
