--- a/QuanLyThuChi/QuanLyThuChi/App.xaml
+++ b/QuanLyThuChi/QuanLyThuChi/App.xaml
@@ -40,8 +40,8 @@
                 <Setter Property="FontSize" Value="Small" />
                 <Setter Property="Margin" Value="0,0,10,5" />
                 <Setter Property="FontAttributes" Value="Bold" />
-                <Setter Property="VerticalOptions" Value="Start" />
-                <Setter Property="HorizontalOptions" Value="Center" />
+                <Setter Property="VerticalOptions" Value="Center" />
+                <Setter Property="HorizontalOptions" Value="End" />
                 <Setter Property="TextColor" Value="#B12B00" />
             </Style>
 
