--- a/QuanLyThuChi/QuanLyThuChi/Views/AddPage.xaml
+++ b/QuanLyThuChi/QuanLyThuChi/Views/AddPage.xaml
@@ -5,6 +5,79 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:prism="http://prismlibrary.com"
     xmlns:views="clr-namespace:QuanLyThuChi.Views"
-    prism:ViewModelLocator.AutowireViewModel="True">
-    <Label Text="Add page" />
+    prism:ViewModelLocator.AutowireViewModel="True"
+    BackgroundColor="#EAEAEA">
+    <StackLayout Margin="0,0,0,5" BackgroundColor="White">
+        <StackLayout Style="{StaticResource HeaderLayoutStackLayout}">
+            <Label Style="{StaticResource HeaderLayoutLabel}" Text="Thêm khoản thu/chi" />
+        </StackLayout>
+        <Grid Margin="5,20,10,0" VerticalOptions="CenterAndExpand">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="60" />
+                <RowDefinition Height="60" />
+                <RowDefinition Height="60" />
+                <RowDefinition Height="60" />
+                <RowDefinition Height="80" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="3*" />
+            </Grid.ColumnDefinitions>
+
+            <Label Style="{StaticResource MainTitleFormat}" Text="Loại" />
+            <Picker
+                Grid.Column="1"
+                ItemsSource="{Binding CategoryPicker}"
+                SelectedItem="{Binding CategorySelected}" />
+            <Label
+                Grid.Row="1"
+                Style="{StaticResource MainTitleFormat}"
+                Text="Ngày" />
+            <DatePicker
+                Grid.Row="1"
+                Grid.Column="1"
+                Date="{Binding DateSelected}" />
+            <Label
+                Grid.Row="2"
+                Style="{StaticResource MainTitleFormat}"
+                Text="Tiêu đề" />
+            <Entry
+                Grid.Row="2"
+                Grid.Column="1"
+                Text="{Binding MainTitle}" />
+            <Label
+                Grid.Row="3"
+                Style="{StaticResource MainTitleFormat}"
+                Text="Số tiền" />
+            <Entry
+                Grid.Row="3"
+                Grid.Column="1"
+                Keyboard="Numeric"
+                Text="{Binding Cost}" />
+            <Label
+                Grid.Row="4"
+                Style="{StaticResource MainTitleFormat}"
+                Text="Nội dung" />
+            <Editor
+                Grid.Row="4"
+                Grid.Column="1"
+                Text="{Binding Comment}" />
+        </Grid>
+        <Grid Margin="0,0,0,30" VerticalOptions="EndAndExpand">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+
+            <Button
+                Command="{Binding CancelBtnCommand}"
+                Style="{StaticResource CancelButton}"
+                Text="HỦY" />
+            <Button
+                Grid.Column="1"
+                Command="{Binding OKBtnCommand}"
+                Style="{StaticResource OKButton}"
+                Text="THÊM" />
+        </Grid>
+    </StackLayout>
 </views:BasePage>
