--- a/QuanLyThuChi/QuanLyThuChi/Views/AddPage.xaml
+++ b/QuanLyThuChi/QuanLyThuChi/Views/AddPage.xaml
@@ -17,7 +17,7 @@
                 <RowDefinition Height="60" />
                 <RowDefinition Height="60" />
                 <RowDefinition Height="60" />
-                <RowDefinition Height="80" />
+                <RowDefinition Height="60" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
@@ -36,7 +36,8 @@
             <DatePicker
                 Grid.Row="1"
                 Grid.Column="1"
-                Date="{Binding DateSelected}" />
+                Date="{Binding DateSelected}"
+                MaximumDate="{Binding MaxDate}" />
             <Label
                 Grid.Row="2"
                 Style="{StaticResource MainTitleFormat}"
