--- a/QuanLyThuChi/QuanLyThuChi/Views/DanhSachThuPage.xaml
+++ b/QuanLyThuChi/QuanLyThuChi/Views/DanhSachThuPage.xaml
@@ -16,6 +16,7 @@
         <CollectionView
             Margin="5"
             ItemsSource="{Binding ListKhoanThu}"
+            SelectedItem="{Binding KhoanThu}"
             SelectionMode="Single">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
