--- a/QuanLyThuChi/QuanLyThuChi/Views/DanhSachChiPage.xaml
+++ b/QuanLyThuChi/QuanLyThuChi/Views/DanhSachChiPage.xaml
@@ -16,6 +16,7 @@
         <CollectionView
             Margin="5"
             ItemsSource="{Binding ListKhoanChi}"
+            SelectedItem="{Binding KhoanChi}"
             SelectionMode="Single">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
