--- a/QuanLyThuChi/QuanLyThuChi/Views/MainPage.xaml
+++ b/QuanLyThuChi/QuanLyThuChi/Views/MainPage.xaml
@@ -18,7 +18,7 @@
             <local:SearchPage />
         </x:Arguments>
     </NavigationPage>
-    <NavigationPage Title="{StaticResource Add}" IconImageSource="add.png">
+    <NavigationPage IconImageSource="add.png">
         <x:Arguments>
             <local:AddPage />
         </x:Arguments>
