--- a/QuanLyThuChi/QuanLyThuChi/App.xaml
+++ b/QuanLyThuChi/QuanLyThuChi/App.xaml
@@ -159,6 +159,13 @@
                 <Setter Property="HorizontalOptions" Value="Start" />
                 <Setter Property="Margin" Value="10,15,0,0" />
             </Style>
+            <Style x:Key="SearchBar" TargetType="SearchBar">
+                <Setter Property="Margin" Value="0,0,5,5" />
+                <Setter Property="TextColor" Value="Black" />
+                <Setter Property="Placeholder" Value="Tìm kiếm theo tên, ngày" />
+                <Setter Property="FontSize" Value="Medium" />
+                <Setter Property="FontFamily" Value="{StaticResource RobotoFontRegular}" />
+            </Style>
         </ResourceDictionary>
 
     </Application.Resources>
