--- a/QuanLyThuChi/QuanLyThuChi/Views/DanhSachChiPage.xaml
+++ b/QuanLyThuChi/QuanLyThuChi/Views/DanhSachChiPage.xaml
@@ -13,6 +13,7 @@
         <cvt:DateToDayMonthConverter x:Key="dateToDayMonthConverter" />
     </ContentPage.Resources>
     <StackLayout Margin="0,0,0,5" BackgroundColor="White">
+        <SearchBar Style="{StaticResource SearchBar}" Text="{Binding SearchText, Mode=TwoWay}" />
         <CollectionView
             Margin="5"
             ItemsSource="{Binding ListKhoanChi}"
