--- a/QuanLyThuChi/QuanLyThuChi/Views/ChartPage.xaml
+++ b/QuanLyThuChi/QuanLyThuChi/Views/ChartPage.xaml
@@ -3,8 +3,199 @@
     x:Class="QuanLyThuChi.Views.ChartPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:b="clr-namespace:Prism.Behaviors;assembly=Prism.Forms"
+    xmlns:cvt="clr-namespace:QuanLyThuChi.Converters"
+    xmlns:microcharts="clr-namespace:Microcharts.Forms;assembly=Microcharts.Forms"
     xmlns:prism="http://prismlibrary.com"
     xmlns:views="clr-namespace:QuanLyThuChi.Views"
-    prism:ViewModelLocator.AutowireViewModel="True">
-    <Label Text="Chart page" />
+    prism:ViewModelLocator.AutowireViewModel="True"
+    BackgroundColor="#EAEAEA">
+    <ContentPage.Resources>
+        <cvt:KhoanThuChiConverter x:Key="khoanThuChiConverter" />
+        <cvt:DateToDayMonthConverter x:Key="dateToDayMonthConverter" />
+    </ContentPage.Resources>
+    <StackLayout Margin="0,0,0,5" BackgroundColor="White">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50" />
+                <RowDefinition Height="50" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="20" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <StackLayout Style="{StaticResource HeaderLayoutStackLayout}">
+                <Label Style="{StaticResource HeaderLayoutLabel}" Text="Thống kê" />
+            </StackLayout>
+            <Picker
+                Grid.Row="1"
+                Margin="10,0,0,0"
+                FontSize="Small"
+                HorizontalOptions="StartAndExpand"
+                ItemsSource="{Binding MonthPicker}"
+                SelectedItem="{Binding MonthSelected}"
+                WidthRequest="90">
+                <Picker.Behaviors>
+                    <b:EventToCommandBehavior Command="{Binding SelectedIndexChangedCommand}" EventName="SelectedIndexChanged" />
+                </Picker.Behaviors>
+            </Picker>
+            <Label Grid.Row="2" IsVisible="{Binding IsNotData}"
+                   Text="Không có dữ liệu." Margin="10,0,0,0" Style="{StaticResource TitleFormat}" />
+            <microcharts:ChartView
+                Grid.Row="2"
+                Margin="0,10,0,10"
+                Chart="{Binding PieChart}"
+                HeightRequest="220"
+                IsVisible="{Binding IsVisible}" />
+            <StackLayout
+                Grid.Row="3"
+                HorizontalOptions="CenterAndExpand"
+                IsVisible="{Binding IsVisible}"
+                Orientation="Horizontal"
+                Spacing="30">
+                <StackLayout Orientation="Horizontal">
+                    <BoxView
+                        BackgroundColor="#00A651"
+                        HeightRequest="20"
+                        WidthRequest="20" />
+                    <Label
+                        FontSize="Small"
+                        Text="Thu"
+                        TextColor="Black" />
+                    <Label
+                        FontSize="Small"
+                        Text="{Binding TongThu, Converter={StaticResource khoanThuChiConverter}}"
+                        TextColor="#169F00" />
+                </StackLayout>
+                <StackLayout Orientation="Horizontal">
+                    <BoxView
+                        BackgroundColor="#ED1C24"
+                        HeightRequest="20"
+                        WidthRequest="20" />
+                    <Label
+                        FontSize="Small"
+                        Text="Chi"
+                        TextColor="Black" />
+                    <Label
+                        FontSize="Small"
+                        Text="{Binding TongChi, Converter={StaticResource khoanThuChiConverter}}"
+                        TextColor="#B12B00" />
+                </StackLayout>
+            </StackLayout>
+            <Grid
+                Grid.Row="4"
+                Margin="5,30,5,10"
+                IsVisible="{Binding IsVisible}">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="30" />
+                        <RowDefinition Height="1" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Label
+                        Margin="0,5,0,0"
+                        FontSize="Small"
+                        HorizontalTextAlignment="Center"
+                        Text="Khoản thu nhiều nhất"
+                        TextColor="Black" />
+                    <BoxView Grid.Row="1" Style="{StaticResource Separator}" />
+                    <CollectionView
+                        Grid.Row="2"
+                        ItemsSource="{Binding ListKhoanThu}"
+                        SelectedItem="{Binding KhoanThu}"
+                        SelectionMode="Single">
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate>
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto" />
+                                        <RowDefinition Height="Auto" />
+                                        <RowDefinition Height="1" />
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition />
+                                        <ColumnDefinition Width="2*" />
+                                    </Grid.ColumnDefinitions>
+
+                                    <Label Style="{StaticResource DateFormat}" Text="{Binding Date, Converter={StaticResource dateToDayMonthConverter}}" />
+                                    <Label
+                                        Grid.Row="1"
+                                        Grid.ColumnSpan="2"
+                                        LineBreakMode="TailTruncation"
+                                        MaxLines="1"
+                                        Style="{StaticResource TitleFormat}"
+                                        Text="{Binding Title}" />
+                                    <Label
+                                        Grid.Column="1"
+                                        Margin="0,5,10,2"
+                                        Style="{StaticResource CostThuFormat}"
+                                        Text="{Binding Cost, Converter={StaticResource khoanThuChiConverter}}" />
+                                    <BoxView
+                                        Grid.Row="2"
+                                        Grid.ColumnSpan="2"
+                                        Style="{StaticResource Separator}" />
+                                </Grid>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
+                </Grid>
+                <Grid Grid.Column="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="30" />
+                        <RowDefinition Height="1" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Label
+                        Margin="0,5,0,0"
+                        FontSize="Small"
+                        HorizontalTextAlignment="Center"
+                        Text="Khoản chi nhiều nhất"
+                        TextColor="Black" />
+                    <BoxView Grid.Row="1" Style="{StaticResource Separator}" />
+                    <CollectionView
+                        Grid.Row="2"
+                        ItemsSource="{Binding ListKhoanChi}"
+                        SelectedItem="{Binding KhoanChi}"
+                        SelectionMode="Single">
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate>
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto" />
+                                        <RowDefinition Height="Auto" />
+                                        <RowDefinition Height="1" />
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition />
+                                        <ColumnDefinition Width="2*" />
+                                    </Grid.ColumnDefinitions>
+
+                                    <Label Style="{StaticResource DateFormat}" Text="{Binding Date, Converter={StaticResource dateToDayMonthConverter}}" />
+                                    <Label
+                                        Grid.Row="1"
+                                        Grid.ColumnSpan="2"
+                                        LineBreakMode="TailTruncation"
+                                        MaxLines="1"
+                                        Style="{StaticResource TitleFormat}"
+                                        Text="{Binding Title}" />
+                                    <Label
+                                        Grid.Column="1"
+                                        Margin="0,5,10,2"
+                                        Style="{StaticResource CostChiFormat}"
+                                        Text="{Binding Cost, Converter={StaticResource khoanThuChiConverter}}" />
+                                    <BoxView
+                                        Grid.Row="2"
+                                        Grid.ColumnSpan="2"
+                                        Style="{StaticResource Separator}" />
+                                </Grid>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
+                </Grid>
+            </Grid>
+        </Grid>
+    </StackLayout>
 </views:BasePage>
