--- a/QuanLyThuChi/QuanLyThuChi/Views/KhoanThuChiDetailPage.xaml
+++ b/QuanLyThuChi/QuanLyThuChi/Views/KhoanThuChiDetailPage.xaml
@@ -3,9 +3,9 @@
     x:Class="QuanLyThuChi.Views.KhoanThuChiDetailPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:cvt="clr-namespace:QuanLyThuChi.Converters"
     xmlns:prism="http://prismlibrary.com"
     xmlns:views="clr-namespace:QuanLyThuChi.Views"
-    xmlns:cvt="clr-namespace:QuanLyThuChi.Converters"
     prism:ViewModelLocator.AutowireViewModel="True"
     BackgroundColor="#EAEAEA">
     <ContentPage.Resources>
@@ -22,11 +22,12 @@
         </StackLayout>
         <Grid Margin="5,20,10,0" VerticalOptions="StartAndExpand">
             <Grid.RowDefinitions>
+                <RowDefinition Height="40" />
+                <RowDefinition Height="40" />
+                <RowDefinition Height="40" />
+                <RowDefinition Height="40" />
                 <RowDefinition Height="60" />
-                <RowDefinition Height="60" />
-                <RowDefinition Height="60" />
-                <RowDefinition Height="60" />
-                <RowDefinition Height="60" />
+                <RowDefinition Height="200" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
@@ -74,6 +75,12 @@
                 Grid.Column="1"
                 Style="{StaticResource MainTitleFormat}"
                 Text="{Binding Comment}" />
+            <Image
+                Grid.Row="5"
+                Grid.ColumnSpan="2"
+                Source="{Binding Image}" 
+                HorizontalOptions="CenterAndExpand"
+                HeightRequest="200"/>
         </Grid>
         <Grid Margin="0,0,0,30" VerticalOptions="EndAndExpand">
             <Grid.ColumnDefinitions>
