--- a/QuanLyThuChi/QuanLyThuChi/App.xaml
+++ b/QuanLyThuChi/QuanLyThuChi/App.xaml
@@ -70,6 +70,7 @@
             <x:String x:Key="Search">Tìm kiếm</x:String>
             <x:String x:Key="Add">Thêm</x:String>
             <x:String x:Key="Chart">Thống kê</x:String>
+            <x:String x:Key="Language">Ngôn ngữ</x:String>
             <x:String x:Key="More">Khác</x:String>
 
             <Style x:Key="HeaderLayoutStackLayout" TargetType="StackLayout">
@@ -164,6 +165,23 @@
                 <Setter Property="TextColor" Value="Black" />
                 <Setter Property="Placeholder" Value="Tìm kiếm theo tên, ngày" />
                 <Setter Property="FontSize" Value="Medium" />
+                <Setter Property="FontFamily" Value="{StaticResource RobotoFontRegular}" />
+            </Style>
+
+            <Style x:Key="StackLayoutMore" TargetType="StackLayout">
+                <Setter Property="BackgroundColor" Value="White" />
+                <Setter Property="VerticalOptions" Value="CenterAndExpand" />
+                <Setter Property="HorizontalOptions" Value="CenterAndExpand" />
+            </Style>
+            <Style x:Key="ImageMore" TargetType="Image">
+                <Setter Property="Margin" Value="20,20,20,10" />
+                <Setter Property="HeightRequest" Value="70" />
+                <Setter Property="WidthRequest" Value="100" />
+            </Style>
+            <Style x:Key="LabelMore" TargetType="Label">
+                <Setter Property="FontSize" Value="Body" />
+                <Setter Property="HorizontalTextAlignment" Value="Center" />
+                <Setter Property="Margin" Value="0,0,0,10" />
                 <Setter Property="FontFamily" Value="{StaticResource RobotoFontRegular}" />
             </Style>
         </ResourceDictionary>
